--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fishing-report/fishing.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fishing.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Science-based fishing forecast using lunar phase, weather data, and solunar theory for North America" />
     <meta name="keywords" content="fishing, forecast, solunar, moon phase, weather, North America" />
