--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Science-based fishing forecast using lunar phase, weather data, and solunar theory for North America" />
     <meta name="keywords" content="fishing, forecast, solunar, moon phase, weather, North America" />
+    <meta class="meta-og-image" id="meta-og-image" property="og:image" content="images/sharing-fishing-report.png" />
     <title>Fishing Forecast - Science-based predictions for North America</title>
   </head>
   <body>
