feat: enhance mobile readiness and improve scroll restoration

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fishing.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta class="viewport-meta" id="viewport-meta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Science-based fishing forecast using lunar phase, weather data, and solunar theory for North America" />
     <meta name="keywords" content="fishing, forecast, solunar, moon phase, weather, North America" />
     <meta class="meta-og-image" id="meta-og-image" property="og:image" content="images/sharing-fishing-report.png" />
