fix: update base paths in 404.html, manifest.json, and vite.config.ts for root deployment

--- a/public/404.html
+++ b/public/404.html
@@ -9,9 +9,9 @@
     // Redirect to the base URL with hash routing
     const path = window.location.pathname.slice(1);
     if (path) {
-      window.location.replace(`${window.location.origin}/fishing-report/#/${path}`);
+      window.location.replace(`${window.location.origin}/#/${path}`);
     } else {
-      window.location.replace(`${window.location.origin}/fishing-report/`);
+      window.location.replace(`${window.location.origin}/`);
     }
   </script>
 </head>
